single pass end to end eval complete

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
        "{'train_accuracy': 0.9741049605768528, 'test_accuracy': 0.9731716559302767}"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
        "7             total_outstanding_orders          10"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,21 +1548,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 789.75757,\n",
-       " 'train_RMSE_to_mean_ratio': 0.27820734488368404,\n",
-       " 'train_MAE:': 558.33057,\n",
-       " 'test_RMSE:': 788.6776,\n",
-       " 'test_RMSE_to_mean_ratio': 0.27781751949047206,\n",
-       " 'test_MAE:': 558.1844}"
+       "{'train_RMSE:': 926.523,\n",
+       " 'train_RMSE_to_mean_ratio': 0.32638561120959436,\n",
+       " 'train_MAE:': 613.99274,\n",
+       " 'test_RMSE:': 919.1477,\n",
+       " 'test_RMSE_to_mean_ratio': 0.32377657421257444,\n",
+       " 'test_MAE:': 612.2132}"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1613,74 +1613,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>error</td>\n",
-       "      <td>0.227605</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>est_time_non-prep</td>\n",
-       "      <td>0.172502</td>\n",
+       "      <td>0.169212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
        "      <td>created_hour_of_day__2</td>\n",
-       "      <td>0.086752</td>\n",
+       "      <td>0.123423</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.079122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>subtotal</td>\n",
-       "      <td>0.029078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>busy_to_outstanding</td>\n",
-       "      <td>0.020696</td>\n",
+       "      <td>0.100601</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
        "      <td>created_hour_of_day__3</td>\n",
-       "      <td>0.019585</td>\n",
+       "      <td>0.033167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>store_est_median_total_prep_time</td>\n",
-       "      <td>0.019001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>created_hour_of_day__5</td>\n",
-       "      <td>0.017803</td>\n",
+       "      <th>98</th>\n",
+       "      <td>market_id__1.0</td>\n",
+       "      <td>0.029006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>112</th>\n",
        "      <td>created_hour_of_day__1</td>\n",
-       "      <td>0.017230</td>\n",
+       "      <td>0.028772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>created_hour_of_day__5</td>\n",
+       "      <td>0.021447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>subtotal</td>\n",
+       "      <td>0.021145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.020304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>market_id__2.0</td>\n",
+       "      <td>0.020162</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             features  importance\n",
-       "136                             error    0.227605\n",
-       "10                  est_time_non-prep    0.172502\n",
-       "113            created_hour_of_day__2    0.086752\n",
-       "14             onshift_to_outstanding    0.079122\n",
-       "1                            subtotal    0.029078\n",
-       "13                busy_to_outstanding    0.020696\n",
-       "114            created_hour_of_day__3    0.019585\n",
-       "25   store_est_median_total_prep_time    0.019001\n",
-       "116            created_hour_of_day__5    0.017803\n",
-       "112            created_hour_of_day__1    0.017230"
+       "                   features  importance\n",
+       "10        est_time_non-prep    0.169212\n",
+       "113  created_hour_of_day__2    0.123423\n",
+       "14   onshift_to_outstanding    0.100601\n",
+       "114  created_hour_of_day__3    0.033167\n",
+       "98           market_id__1.0    0.029006\n",
+       "112  created_hour_of_day__1    0.028772\n",
+       "116  created_hour_of_day__5    0.021447\n",
+       "1                  subtotal    0.021145\n",
+       "13      busy_to_outstanding    0.020304\n",
+       "99           market_id__2.0    0.020162"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1704,19 +1704,16 @@
     "\n",
     "Dropping the orders predicted to take at least 90 minutes and then training a model with that trimmed dataset produces the following metrics:\n",
     "\n",
-    "    {'train_RMSE:': 789.75757,\n",
-    "    'train_RMSE_to_mean_ratio': 0.27820734488368404,\n",
-    "    'train_MAE:': 558.33057,\n",
-    "    'test_RMSE:': 788.6776,\n",
-    "    'test_RMSE_to_mean_ratio': 0.27781751949047206,\n",
-    "    'test_MAE:': 558.1844}\n",
+    "    {'train_RMSE:': 926.523,\n",
+    "    'train_RMSE_to_mean_ratio': 0.32638561120959436,\n",
+    "    'train_MAE:': 613.99274,\n",
+    "    'test_RMSE:': 919.1477,\n",
+    "    'test_RMSE_to_mean_ratio': 0.32377657421257444,\n",
+    "    'test_MAE:': 612.2132}\n",
     "\n",
     "As expected, removing outliers improves the performance of the model. We are only able to remove outliers because of the strong performance of the classifier model and the small number of orders that would receive a notice rather than an estimate. \n",
     "\n",
-    "Two other notes:\n",
-    "\n",
-    "1. I did apply log and standard normalization to the dataset in an attempt to mitigate the effect of the outliers, but normalization had a negligable effect when compared against the two-step model. \n",
-    "2. The USD value of the orders that were knocked out from the dataset is $28,006.01. In practice we would want to identify the impact of accurate total delivery duration estimates on the cancellation rate to determine if the compute costs for the model "
+    "One other note: I did apply log and standard normalization to the dataset in an attempt to mitigate the effect of the outliers, but normalization had a negligable effect when compared against the two-step model. "
    ]
   },
   {
@@ -2208,6 +2205,207 @@
    ],
    "source": [
     "deliv_prep_model[1].sort_values(by='importance',ascending=False).head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## with trimmed df\n",
+    "trim_store_prep_df = dataset.join(prep_time_df[['est_order_total_prep_time']])\n",
+    "trim_store_prep_df = trim_store_prep_df[trim_store_prep_df['y_pred'] == 0]\n",
+    "trim_train_df = trim_store_prep_df.copy()\n",
+    "trim_store_prep_df_train_test = build_train_test(dataset=trim_store_prep_df.drop(columns=['y_pred','pred_over_one_half_hours','over_one_half_hours','actual_total_delivery_duration']),target_feature='est_order_total_prep_time',test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 936.8921,\n",
+       " 'train_RMSE_to_mean_ratio': 0.47191718824908974,\n",
+       " 'train_MAE:': 622.3278,\n",
+       " 'test_RMSE:': 926.23663,\n",
+       " 'test_RMSE_to_mean_ratio': 0.46625669891436616,\n",
+       " 'test_MAE:': 617.895}"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_trim_prep_time = predict_prep_time(\n",
+    "    prep_xtrain=trim_store_prep_df_train_test[0],\n",
+    "    prep_xtest=trim_store_prep_df_train_test[1],\n",
+    "    prep_ytrain=trim_store_prep_df_train_test[2],\n",
+    "    prep_ytest=trim_store_prep_df_train_test[3],\n",
+    "    time_budget=120,\n",
+    "    metric='r2',\n",
+    "    estimator_list=['xgboost','xgb_gamma'],\n",
+    "    prep_est_features_df=trim_store_prep_df.drop(columns=['y_pred','pred_over_one_half_hours','over_one_half_hours']),\n",
+    "    delivery_est_features_df=trim_train_df\n",
+    ")\n",
+    "pred_trim_prep_time[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deliv_train_test = build_train_test(dataset=pred_trim_prep_time[0].drop(columns=['est_order_total_prep_time','pred_over_one_half_hours','y_pred','over_one_half_hours']),target_feature='actual_total_delivery_duration',test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 928.8447,\n",
+       " 'train_RMSE_to_mean_ratio': 0.32720348058579907,\n",
+       " 'train_MAE:': 615.22754,\n",
+       " 'test_RMSE:': 920.5179,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3242592296209939,\n",
+       " 'test_MAE:': 613.2788}"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "composite_deliv_model = ApplyMethod_autoML(\n",
+    "    x_train=deliv_train_test[0],\n",
+    "    x_test=deliv_train_test[1],\n",
+    "    y_train=deliv_train_test[2],\n",
+    "    y_test=deliv_train_test[3],\n",
+    "    time_budget=120,\n",
+    "    metric='mse',\n",
+    "    task='regression',\n",
+    "    estimator_list=['xgboost','xgb_gamma']\n",
+    ")\n",
+    "composite_deliv_model[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>est_composite_delivery</td>\n",
+       "      <td>0.457472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>pred_order_prep_time</td>\n",
+       "      <td>0.137700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>est_time_non-prep</td>\n",
+       "      <td>0.069490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>onshift_to_outstanding</td>\n",
+       "      <td>0.020184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>estimated_store_to_consumer_driving_duration</td>\n",
+       "      <td>0.017707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.012599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>store_est_median_total_prep_time</td>\n",
+       "      <td>0.005978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>market_id__2.0</td>\n",
+       "      <td>0.005611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>market_id__3.0</td>\n",
+       "      <td>0.005034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>created_hour_of_day__5</td>\n",
+       "      <td>0.004728</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         features  importance\n",
+       "137                        est_composite_delivery    0.457472\n",
+       "136                          pred_order_prep_time    0.137700\n",
+       "10                              est_time_non-prep    0.069490\n",
+       "14                         onshift_to_outstanding    0.020184\n",
+       "9    estimated_store_to_consumer_driving_duration    0.017707\n",
+       "13                            busy_to_outstanding    0.012599\n",
+       "25               store_est_median_total_prep_time    0.005978\n",
+       "99                                 market_id__2.0    0.005611\n",
+       "100                                market_id__3.0    0.005034\n",
+       "116                        created_hour_of_day__5    0.004728"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "composite_deliv_model[1].sort_values(by='importance',ascending=False).head(10)"
    ]
   },
   {
