updated classification + pred writeup

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1116,6 +1116,8 @@
    "source": [
     "#### PCA versus VIF dimensionality reduction:\n",
     "\n",
+    "TODO: #10 rewrite dimensionality reduction write-up\n",
+    "\n",
     "The PCA featureset took 4.6 seconds to produce, and needed 2 minutes 14.8 seconds to train a vanilla xgboost regression that produced the following performance statistics:\n",
     "\n",
     "    {'train_RMSE:': 796.2581,\n",
@@ -1353,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1375,7 @@
        "{'train_accuracy': 0.9741049605768528, 'test_accuracy': 0.9731716559302767}"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1523,7 @@
        "7             total_outstanding_orders          10"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,21 +1550,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 926.523,\n",
-       " 'train_RMSE_to_mean_ratio': 0.32638561120959436,\n",
-       " 'train_MAE:': 613.99274,\n",
-       " 'test_RMSE:': 919.1477,\n",
-       " 'test_RMSE_to_mean_ratio': 0.32377657421257444,\n",
-       " 'test_MAE:': 612.2132}"
+       "(754, 141)"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[dataset['y_pred']==1].shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 864.12366,\n",
+       " 'train_RMSE_to_mean_ratio': 0.3248253654944463,\n",
+       " 'train_MAE:': 568.6674,\n",
+       " 'test_RMSE:': 856.34125,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3222498631098502,\n",
+       " 'test_MAE:': 561.46136}"
+      ]
+     },
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -1615,52 +1637,52 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>est_time_non-prep</td>\n",
-       "      <td>0.169212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>created_hour_of_day__2</td>\n",
-       "      <td>0.123423</td>\n",
+       "      <td>0.225216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.100601</td>\n",
+       "      <td>0.103027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>created_hour_of_day__3</td>\n",
-       "      <td>0.033167</td>\n",
+       "      <th>113</th>\n",
+       "      <td>created_hour_of_day__2</td>\n",
+       "      <td>0.088788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>market_id__1.0</td>\n",
-       "      <td>0.029006</td>\n",
+       "      <td>0.030628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>112</th>\n",
        "      <td>created_hour_of_day__1</td>\n",
-       "      <td>0.028772</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>created_hour_of_day__5</td>\n",
-       "      <td>0.021447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>subtotal</td>\n",
-       "      <td>0.021145</td>\n",
+       "      <td>0.029018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>busy_to_outstanding</td>\n",
-       "      <td>0.020304</td>\n",
+       "      <td>0.028292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>created_hour_of_day__5</td>\n",
+       "      <td>0.025160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
        "      <td>market_id__2.0</td>\n",
-       "      <td>0.020162</td>\n",
+       "      <td>0.023024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>market_id__3.0</td>\n",
+       "      <td>0.021393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>subtotal</td>\n",
+       "      <td>0.020979</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1668,19 +1690,19 @@
       ],
       "text/plain": [
        "                   features  importance\n",
-       "10        est_time_non-prep    0.169212\n",
-       "113  created_hour_of_day__2    0.123423\n",
-       "14   onshift_to_outstanding    0.100601\n",
-       "114  created_hour_of_day__3    0.033167\n",
-       "98           market_id__1.0    0.029006\n",
-       "112  created_hour_of_day__1    0.028772\n",
-       "116  created_hour_of_day__5    0.021447\n",
-       "1                  subtotal    0.021145\n",
-       "13      busy_to_outstanding    0.020304\n",
-       "99           market_id__2.0    0.020162"
+       "10        est_time_non-prep    0.225216\n",
+       "14   onshift_to_outstanding    0.103027\n",
+       "113  created_hour_of_day__2    0.088788\n",
+       "98           market_id__1.0    0.030628\n",
+       "112  created_hour_of_day__1    0.029018\n",
+       "13      busy_to_outstanding    0.028292\n",
+       "116  created_hour_of_day__5    0.025160\n",
+       "99           market_id__2.0    0.023024\n",
+       "100          market_id__3.0    0.021393\n",
+       "1                  subtotal    0.020979"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1700,7 +1722,7 @@
     "\n",
     "    {'train_accuracy': 0.9741049605768528, 'test_accuracy': 0.9731716559302767}\n",
     "\n",
-    "Note that the above accuracy scores are for the entire dataset - the classifier model only managed to identify 754 of the 4815 orders (15.66%) with a total delivery duration of 90 minutes or more.\n",
+    "Note that the above accuracy scores are for the entire dataset - the classifier model only managed to identify 754 of the 4815 orders (15.66%) with a total delivery duration of 90 minutes or more. Of those 754 observations/orders, 482 (63.93%) were correctly labeled and 272 (36.07%) were incorrectly labeled. \n",
     "\n",
     "Dropping the orders predicted to take at least 90 minutes and then training a model with that trimmed dataset produces the following metrics:\n",
     "\n",
@@ -1711,7 +1733,7 @@
     "    'test_RMSE_to_mean_ratio': 0.32377657421257444,\n",
     "    'test_MAE:': 612.2132}\n",
     "\n",
-    "As expected, removing outliers improves the performance of the model. We are only able to remove outliers because of the strong performance of the classifier model and the small number of orders that would receive a notice rather than an estimate. \n",
+    "As expected, removing outliers improves the performance of the model. Notably, the RMSE-to-mean ratio for the test/holdout data improved by 7.07% compared to the single-model approach. We are only able to remove outliers because of the strong performance of the classifier model and the small number of orders that would receive a notice rather than an estimate. \n",
     "\n",
     "One other note: I did apply log and standard normalization to the dataset in an attempt to mitigate the effect of the outliers, but normalization had a negligable effect when compared against the two-step model. "
    ]
@@ -2267,21 +2289,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 928.8447,\n",
-       " 'train_RMSE_to_mean_ratio': 0.32720348058579907,\n",
-       " 'train_MAE:': 615.22754,\n",
-       " 'test_RMSE:': 920.5179,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3242592296209939,\n",
-       " 'test_MAE:': 613.2788}"
+       "{'train_RMSE:': 930.8929,\n",
+       " 'train_RMSE_to_mean_ratio': 0.32792498332397046,\n",
+       " 'train_MAE:': 616.1417,\n",
+       " 'test_RMSE:': 921.942,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3247608911045634,\n",
+       " 'test_MAE:': 613.83325}"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,116 +2317,9 @@
     "    time_budget=120,\n",
     "    metric='mse',\n",
     "    task='regression',\n",
-    "    estimator_list=['xgboost','xgb_gamma']\n",
+    "    estimator_list=['xgb_gamma','xgboost']\n",
     ")\n",
-    "composite_deliv_model[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>features</th>\n",
-       "      <th>importance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>est_composite_delivery</td>\n",
-       "      <td>0.457472</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>pred_order_prep_time</td>\n",
-       "      <td>0.137700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>est_time_non-prep</td>\n",
-       "      <td>0.069490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.020184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>estimated_store_to_consumer_driving_duration</td>\n",
-       "      <td>0.017707</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>busy_to_outstanding</td>\n",
-       "      <td>0.012599</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>store_est_median_total_prep_time</td>\n",
-       "      <td>0.005978</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>market_id__2.0</td>\n",
-       "      <td>0.005611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>market_id__3.0</td>\n",
-       "      <td>0.005034</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>created_hour_of_day__5</td>\n",
-       "      <td>0.004728</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         features  importance\n",
-       "137                        est_composite_delivery    0.457472\n",
-       "136                          pred_order_prep_time    0.137700\n",
-       "10                              est_time_non-prep    0.069490\n",
-       "14                         onshift_to_outstanding    0.020184\n",
-       "9    estimated_store_to_consumer_driving_duration    0.017707\n",
-       "13                            busy_to_outstanding    0.012599\n",
-       "25               store_est_median_total_prep_time    0.005978\n",
-       "99                                 market_id__2.0    0.005611\n",
-       "100                                market_id__3.0    0.005034\n",
-       "116                        created_hour_of_day__5    0.004728"
-      ]
-     },
-     "execution_count": 226,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "print(composite_deliv_model[2])\n",
     "composite_deliv_model[1].sort_values(by='importance',ascending=False).head(10)"
    ]
   },
@@ -2414,6 +2329,8 @@
    "metadata": {},
    "source": [
     "### Results thusfar:\n",
+    "\n",
+    "TODO: #11 rewrite final results write-up\n",
     "\n",
     "Before I go any farther, it is worth asking if all this modeling is even worth the effort. The function `create_baseline` uses basic averages and outlier removal to provide a delivery duration value for each observation. The performance results for that method are as follows:\n",
     "\n",
